--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -203,10 +203,10 @@
                 <span class="pl-2 text-gray-400">Let's be a hero...</span>
               </div>
           </h5>
-          <img class="rounded-full bg-gray-500 h-12 lg:h-20 lg:w-20" src="assets/war-within-logo.png" onerror="this.style.display='none'" *ngIf="isHeroLoaded">
+          <img class="rounded-full bg-gray-500 h-12 lg:h-20 lg:w-20" src="{{ randomHero.icon }}" onerror="this.style.display='none'" *ngIf="isHeroLoaded">
 
           <div class="flex flex-col p-1 lg:p-4" *ngIf="isHeroLoaded">
-              <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-300">{{ randomHero }}</h5>
+              <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-300">{{ randomHero.name }}</h5>
           </div>
         </div>
 
